# Dissim

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  README.md
Dissim/: CMakeLists.txt
Dissim/include/: dissim.h
Dissim/include/Components/: Components.h
Dissim/include/Components/Math/: K_HP.h  tau_friction.h
Dissim/include/Components/Motor/: ElectroMotor.h  HydraulicMotor.h
Dissim/include/Components/Pump/: HydraulicPump.h
Dissim/include/Core/: Abs.h  AlgabraicLoop.h  BasicOperationBlock.h  Block.h  BlockException.h  Chronos.h  Core.h  DissimType.h  Export.h  Hyberbolic.h  Integrator.h  Saturation.h  Signal.h  Simulation.h  Solver.h  SystemBlock.h
Dissim/include/FirstPrinciple/: DeltaTorque2omega.h  FirstPrinciple.h
Dissim/include/Math/: Common.h  DissimConstants.h  Math.h
Dissim/src/Components/Math/: K_HP.cpp  tau_friction.cpp
Dissim/src/Components/Motor/: ElectroMotor.cpp  HydraulicMotor.cpp
Dissim/src/Components/Pump/: HydraulicPump.cpp
Dissim/src/Core/: Abs.cpp  AlgabraicLoop.cpp  BasicOperationBlock.cpp  Block.cpp  Chronos.cpp  DissimType.cpp  Export.cpp  Hyberbolic.cpp  Integrator.cpp  Saturation.cpp  Signal.cpp  Simulation.cpp  Solver.cpp  SystemBlock.cpp
Dissim/src/FirstPrinciple/: DeltaTorque2omega.cpp
Dissim/src/Math/: Common.cpp
cmake/: Toolchain_BBB.cmake
unitTest/: CMakeLists.txt
unitTest/runTests/: CMakeLists.txt  Tests.cpp
